--- a/wordpress/wp-content/themes/theme-de-base/style.css
+++ b/wordpress/wp-content/themes/theme-de-base/style.css
@@ -15,6 +15,10 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 
 */
+body {
+  background-color: red;
+}
+
 /*--------------------------- FONT -------------------------------*/
 @font-face {
   font-family: "pacifico";
@@ -1553,4 +1557,4 @@ footer a:hover {
     justify-content: center;
     flex-direction: column;
   }
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=style.css.map */
