--- a/wordpress/wp-content/themes/theme-de-base/style.scss
+++ b/wordpress/wp-content/themes/theme-de-base/style.scss
@@ -13,11 +13,12 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 
-*/
-
-
+*/ 
 @use "variables";
 
+body{
+  background-color: red;
+}
 /*--------------------------- FONT -------------------------------*/
 @font-face {
   font-family: "pacifico";
